adicionando icones e mais traducoes

--- a/src/utils/locales/en/translation.json
+++ b/src/utils/locales/en/translation.json
@@ -6,11 +6,21 @@
   "initial_date": "Initial Date",
   "final_date": "Final Date",
   "select_valid_date": "Select a valid date",
+  "date_format": "{{month}}/{{day}}/{{year}}",
   "units": {
+    "year": "year",
+    "years": "years",
+    "month": "month",
+    "months": "months",
+    "week": "week",
     "weeks": "weeks",
+    "day": "day",
     "days": "days",
+    "hour": "hour",
     "hours": "hours",
+    "minute": "minute",
     "minutes": "minutes",
+    "second": "second",
     "seconds": "seconds"
   }
 }
